[workspace]
members = ["hylo-core", "hylo-idl", "hylo-jupiter"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "MPL-2.0"
homepage = "https://hylo.so"

[workspace.dependencies]
anchor-lang = "=0.31.1"
anchor-spl = "=0.31.1"
anyhow = "1.0.98"
hylo-core = { version = "0.4.1", path = "hylo-core" }
hylo-fix = "0.4.2"
hylo-idl = { version = "0.4.1", path = "hylo-idl" }
jupiter-amm-interface = "0.6.1"
mpl-token-metadata = "5.1.1"
paste = "1.0.15"
proptest = "1.5.0"
pyth-solana-receiver-sdk = "=1.0.1"
rust_decimal = "1.37.2"
solana-address-lookup-table-interface = "=2.2.2"
solana-loader-v3-interface = "5.0.0"
solana-program-pack = "2.2.1"
spl-token-interface = "1.0.0"
